--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <div class="jumbotron text-center"></div>
+    <div class="jumbotron1 text-center"></div>
 
-    <form action="portada.html">
+    <form action="portada.html" class="login">
         <h2>Inicio de sesión</h2>
         <label for="email">Email</label><br>
         <input type="text" id="email" name="email" required><br>
