--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 <body>
     <div class="jumbotron1 text-center"></div>
 
-    <form action="portada.html" class="login">
-        <h2>Inicio de sesión</h2>
-        <label for="email">Email</label><br>
-        <input type="text" id="email" name="email" required><br>
-        <label for="password">Contraseña</label><br>
-        <input type="text" id="password" name="password" required><br><br>
-        <input type="submit" value="Ingresar">
-    </form>
+    <div class="login">
+        <form action="portada.html" class="form-login">
+            <h2>Inicio de sesión</h2>
+            <label for="email">Email</label><br>
+            <input type="text" id="email" name="email" required><br>
+            <label for="password">Contraseña</label><br>
+            <input type="text" id="password" name="password" required><br><br>
+            <input type="submit" value="Ingresar" class="form-login-submit">
+        </form>
+    </div>
 
     <footer class="text-muted">
         <div class="container">
