--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label for="email">Email</label><br>
             <input type="text" id="email" name="email" required><br>
             <label for="password">Contraseña</label><br>
-            <input type="text" id="password" name="password" required><br><br>
+            <input type="password" id="password" name="password" required><br><br>
             <input type="submit" value="Ingresar" class="form-login-submit">
         </form>
     </div>
