login fix responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="jumbotron1 text-center"></div>
+    <div class="jumbotron1"></div>
 
     <div class="login">
         <form action="portada.html" class="form-login">
