--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 </head>
 
 <body>
+    <!-- imagen de e-mercado -->
     <div class="jumbotron1"></div>
 
     <div class="login">
-        
+        <!-- formulario de ingreso a la pagina -->
         <form action="portada.html" class="form-login">
             <h2>Inicio de sesión</h2>
             <label for="email">Email</label><br>
@@ -24,9 +25,8 @@
             <input type="password" id="password" name="password" required><br><br>
             <input type="submit" value="Ingresar" class="form-login-submit">
         </form>
-        
     </div>
-
+    <!-- footer generico ya existente -->
     <footer class="text-muted">
         <div class="container">
             <p class="float-end">
