--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
 <body>
     <!-- imagen de e-mercado -->
     <div class="jumbotron1"></div>
+
     <!-- formulario de ingreso a la pagina -->
-    <div class="login">
-        <form action="portada.html" class="form-login">
-            <h2>Inicio de sesión</h2>
-            <label for="email">Email</label><br>
-            <input type="text" id="email" name="email" required><br>
-            <label for="password">Contraseña</label><br>
-            <input type="password" id="password" name="password" required><br><br>
-            <input type="submit" value="Ingresar" class="form-login-submit">
-        </form>
+    <div class="form-login">
+
+        <h2>prueba</h2><br>
+
+        <label for="nombre-usuario">nombre usuario</label><br><br>
+        <input type="text" id="nombre-usuario"><br><br>
+        <label for="password">Contraseña</label><br>
+        <input type="password" id="password"><br><br>
+
+        <button class="form-login-submit" type="button" id="button" onclick="login()">Registrarme</button><br><br>
+
     </div>
+
     <!-- footer generico ya existente -->
     <footer class="text-muted">
         <div class="container">
@@ -37,6 +41,13 @@
             <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
         </div>
     </footer>
+    <!-- div de alerta de error -->
+    <div class="alert alert-danger alert-dismissible fade" role="alert" id="alert-danger">
+        <p>Debe colocar al menos un caracter en nombre de usuario y password</p>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" onclick="cerrarDiv()"></button>
+    </div>
+
+    <script src="js/login.js"></script>
 </body>
 
 </html>
