--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <h2>prueba</h2><br>
 
-        <label for="nombre-usuario">nombre usuario</label><br><br>
+        <label for="nombre-usuario">Email</label><br><br>
         <input type="text" id="nombre-usuario"><br><br>
         <label for="password">Contraseña</label><br>
         <input type="password" id="password"><br><br>
