--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Inicio de sesion</h2>
 
         <label for="nombre-usuario">Email</label><br>
-        <input type="text" id="nombre-usuario"><br>
+        <input type="text" id="nombre-usuario" name="nombre-usuario"><br><br>
         <label for="password">Contraseña</label><br>
         <input type="password" id="password"><br><br>
 
