--- a/products.html
+++ b/products.html
@@ -40,10 +40,8 @@
 
   <main class="pb-5 container">
     <!-- titulo con class ya creadas -->
-    <div class="text-center p-4">
-      <h2>Autos</h2>
-      <p class="lead">Verás aquí todos las autos del sitio.</p>
-    </div>
+    <div class="text-center p-4" id="titulo"></div>
+
     <div class="container">
       <!-- indice alfabetico -->
       <div class="row">
