--- a/products.html
+++ b/products.html
@@ -32,6 +32,8 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+              <p class="nav-link" id="nav-usuario"></p>
+            </li>
           </li>
         </ul>
       </div>
@@ -56,6 +58,7 @@
           </div>
         </div>
       </div>
+
       <!-- filtro por cantidad -->
       <div class="row">
         <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
@@ -78,12 +81,14 @@
           </div>
         </div>
       </div>
+
       <!-- div con id=products donde ingreso los elementos mediante js-->
       <div class="row">
         <div class="list-group" id="products"></div>
       </div>
     </div>
   </main>
+
   <!-- footer generico ya existente -->
   <footer class="text-muted">
     <div class="container">
