--- a/sell.html
+++ b/sell.html
@@ -31,6 +31,7 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <p class="nav-link" id="nav-usuario"></p>
           </li>
         </ul>
       </div>
