--- a/login.html
+++ b/login.html
@@ -1,41 +1,54 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>eMercado - Todo lo que busques está aquí</title>
-  <link rel="icon" href="img/jap-logo.png" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: rgb(248, 249, 250);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>eMercado - Login</title>
+    <link rel="icon" href="img/jap-logo.png" type="image/x-icon">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-  <main class="mt-5">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
-    </div>
-  </main>
+    <!-- imagen de e-mercado -->
+    <div class="jumbotron1"></div>
 
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
-        2022</p>
-      <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+    <!-- formulario de ingreso a la pagina -->
+    <div class="form-login">
+
+        <h2>Inicio de sesion</h2>
+
+        <label for="nombre-usuario">Email</label><br>
+        <input type="text" id="nombre-usuario" name="nombre-usuario"><br><br>
+        <label for="password">Contraseña</label><br>
+        <input type="password" id="password"><br><br>
+
+        <button class="form-login-submit" type="button" id="button" onclick="login()">Registrarme</button><br>
+
     </div>
-  </footer>
-  <script src="js/login.js"></script>
+
+    <!-- footer generico ya existente -->
+    <footer class="text-muted">
+        <div class="container">
+            <p class="float-end">
+                <a href="#">Volver arriba</a>
+            </p>
+            <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a
+                    Programar</a> -
+                2022</p>
+            <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+        </div>
+    </footer>
+    <!-- div de alerta de error -->
+    <div class="alert alert-danger alert-dismissible fade" role="alert" id="alert-danger">
+        <p>Debe colocar al menos un caracter en nombre de usuario y password</p>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"
+            onclick="cerrarDiv()"></button>
+    </div>
+
+    <script src="js/login.js"></script>
 </body>
 
 </html>
