--- a/sell.html
+++ b/sell.html
@@ -180,9 +180,9 @@
     </div>
   </footer>
 
-  <div class="alert alert-primary-dismissible fade" id="alertResult" role="alert">
+  <!-- <div class="alert alert-primary-dismissible fade" id="alertResult" role="alert">
     <span id="resultSpan"></span>
-  </div>
+  </div> -->
 
   <div class="modal fade" tabindex="-1" role="dialog" id="contidionsModal">
     <div class="modal-dialog" role="document">
