--- a/products.html
+++ b/products.html
@@ -59,6 +59,7 @@
         </div>
       </div>
       <div class="col">
+        <i class="fas fa-search"></i>
         <input type="search" id="buscar">
       </div>
       <!-- filtro por cantidad -->
