--- a/products.html
+++ b/products.html
@@ -58,9 +58,9 @@
           </div>
         </div>
       </div>
-      <div class="col">
-        <i class="fas fa-search"></i>
-        <input type="search" id="buscar">
+      <div class="row">
+        <div class="col"><i class="fas fa-search"></i></div>
+        <div class="col-3"><input type="search" id="buscar"></div>
       </div>
       <!-- filtro por cantidad -->
       <div class="row">
