--- a/products.html
+++ b/products.html
@@ -58,9 +58,14 @@
           </div>
         </div>
       </div>
+       <!-- input search -->
       <div class="row">
-        <div class="col"><i class="fas fa-search"></i></div>
-        <div class="col-3"><input type="search" id="buscar"></div>
+        <div class="col">
+          <i class="fas fa-search"></i>
+        </div>
+        <div class="col-3">
+          <input type="search" id="buscar">
+        </div>
       </div>
       <!-- filtro por cantidad -->
       <div class="row">
