--- a/products.html
+++ b/products.html
@@ -60,10 +60,8 @@
       </div>
        <!-- input search -->
       <div class="row">
-        <div class="col">
-          <i class="fas fa-search"></i>
-        </div>
-        <div class="col-3">
+        <div class="col text-end">
+          <label class="btn btn-light" for="buscar"><i class="fas fa-search"></i></label>
           <input type="search" id="buscar">
         </div>
       </div>
