--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
       <!-- indice alfabetico -->
       <div class="row">
         <div class="col text-end">
-          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+          <div class="btn-group btn-group-toggle m-1" data-bs-toggle="buttons">
             <input type="radio" class="btn-check" name="options" id="sortAsc">
             <label class="btn btn-light" for="sortAsc">$<i class="fas fa-sort-amount-down mr-1"></i></label>
             <input type="radio" class="btn-check" name="options" id="sortDesc">
@@ -58,17 +58,19 @@
           </div>
         </div>
       </div>
+      
        <!-- input search -->
       <div class="row">
-        <div class="col text-end">
+        <div class="col text-end m-1">
           <input type="search" id="buscar">
           <label class="btn btn-light" for="buscar"><i class="fas fa-search"></i></label>
         </div>
       </div>
+      
       <!-- filtro por cantidad -->
       <div class="row">
         <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
-          <div class="row container p-0 m-0">
+          <div class="row container p-0 m-1">
             <div class="col">
               <p class="font-weight-normal text-end my-2">Cant.</p>
             </div>
