--- a/categories.html
+++ b/categories.html
@@ -44,6 +44,7 @@
       <p class="lead">Verás aquí todas las categorías del sitio.</p>
     </div>
     <div class="container">
+      <!-- orden alfabetico -->
       <div class="row">
         <div class="col text-end">
           <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
@@ -56,6 +57,7 @@
           </div>
         </div>
       </div>
+      <!-- filtro precio -->
       <div class="row">
         <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
           <div class="row container p-0 m-0">
