--- a/product-info.html
+++ b/product-info.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <!-- Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -37,13 +38,17 @@
       </div>
     </div>
   </nav>
-  <main>
+
+    <main class="pb-5 container">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <!-- div con id=products-info donde ingreso los elementos mediante js-->
+      <div class="row">
+        <div class="list-group" id="products-info"></div>
       </div>
     </div>
   </main>
+
+  <!-- Footer -->
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
