--- a/product-info.html
+++ b/product-info.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="img/jap-logo.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -39,11 +40,21 @@
     </div>
   </nav>
 
-    <main class="pb-5 container">
+  <main class="pb-5 container">
     <div class="container">
       <!-- div con id=products-info donde ingreso los elementos mediante js-->
       <div class="row">
         <div class="list-group" id="products-info"></div>
+      </div>
+
+      <div class="row">
+        <div class="m-5">
+          <h2>Comentarios</h2>
+          <div class="list-group" id="products-info-comentarios">
+            
+          </div>
+<div id="texto"></div>
+        </div>
       </div>
     </div>
   </main>
