--- a/product-info.html
+++ b/product-info.html
@@ -49,11 +49,9 @@
 
       <div class="row">
         <div class="m-5">
-          <h2>Comentarios</h2>
-          <div class="list-group" id="products-info-comentarios">
-            
-          </div>
-<div id="texto"></div>
+          <h4>Comentarios</h4>
+          <div class="list-group" id="products-info-comentarios"></div>
+          <div id="hacer-comentario"></div>
         </div>
       </div>
     </div>
