--- a/product-info.html
+++ b/product-info.html
@@ -54,6 +54,12 @@
           <div id="hacer-comentario"></div>
         </div>
       </div>
+      <div class="row">
+        <div class="m-5">
+          <h4>Productos relacionados</h4>
+          <div class="row" id="related-products"></div>
+        </div>
+      </div>
     </div>
   </main>
 
