--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <!-- p con id nav-usuario -->
-          <li class="nav-item">
-            <p class="nav-link" id="nav-usuario"></p>
-          </li>
+          <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="nav-usuario" data-bs-toggle="dropdown" aria-expanded="false">user
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="#">Mi Carrito</a></li>
+    <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+    <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+  </ul>
+</div>    
         </ul>
       </div>
     </div>
