--- a/index.html
+++ b/index.html
@@ -30,15 +30,18 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <!-- p con id nav-usuario -->
-          <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="nav-usuario" data-bs-toggle="dropdown" aria-expanded="false">user
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <li><a class="dropdown-item" href="#">Mi Carrito</a></li>
-    <li><a class="dropdown-item" href="#">Mi perfil</a></li>
-    <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
-  </ul>
-</div>    
+           <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="nav-usuario" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            user
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+            <li><a class="dropdown-item" href="#">Mi carrito</a></li>
+            <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+            <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+          </ul>
+        </li>
+      </ul>
         </ul>
       </div>
     </div>
