--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <!-- p con id nav-usuario -->
-           <ul class="navbar-nav">
+          <!-- li con id nav-usuario -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="nav-usuario" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             user
@@ -41,7 +40,6 @@
             <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
           </ul>
         </li>
-      </ul>
         </ul>
       </div>
     </div>
