--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
             <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
             <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
-            <li><a class="dropdown-item"  href="index.html">Cerrar sesion</a><script>localStorage.clear();</script></li>
+            <li><a class="dropdown-item"  href="index.html">Cerrar sesion</a></li>
           </ul>
         </li>
         </ul>
