--- a/cart.html
+++ b/cart.html
@@ -17,9 +17,8 @@
   <div id="navegador"></div>
   <main>
     <div class="container">
-      <!-- <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div> -->
+      
+      <div id="main"></div>
     </div>
   </main>
   <!-- Footer -->
