--- a/cart.html
+++ b/cart.html
@@ -17,8 +17,61 @@
   <div id="navegador"></div>
   <main>
     <div class="container">
-
-      <div id="main"></div>
+      <div id="main">
+        <div>
+          <h2>Carrito de compras</h2><br>
+          <h4>Articulos a comprar</h4>
+          <div class="row">
+            <div class="col"></div>
+            <div class="col fw-bold">Nombre</div>
+            <div class="col fw-bold">Costo</div>
+            <div class="col fw-bold">Cantidad</div>
+            <div class="col fw-bold">Subtotal</div>
+            <hr size="5" style="opacity:1;">
+            <div class="col" id="image"></div>
+            <div class="col" id="name"></div>
+            <div class="col" id="unitCost"></div>
+            <div class="col"><input type="number" id="cantidad" min="0" value="1"></input></div>
+            <div class="col fw-bold" id="subTotal"></div>
+            <hr class="mt-2">
+          </div>
+          <div class="row">
+            <hr class="mb-4 mt-2">
+            <h4 class="mb-3">Tipo de envio</h4>
+            <div class="mb-3">
+              <div class="custom-control custom-radio">
+                <input id="goldradio" name="publicationType" type="radio" class="custom-control-input" checked=""
+                  required="">
+                <label class="custom-control-label" for="goldradio">Premium 2 a 5 dias (15%)</label>
+              </div>
+              <div class="custom-control custom-radio">
+                <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" required="">
+                <label class="custom-control-label" for="premiumradio">Express 5 a 8 dias (7%)</label>
+              </div>
+              <div class="custom-control custom-radio">
+                <input id="standardradio" name="publicationType" type="radio" class="custom-control-input" required="">
+                <label class="custom-control-label" for="standardradio">stándard 12 a 15 dias (5%)</label>
+              </div>
+            </div>
+            <h4 class="mb-3">Direccion de envio</h4>
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="productName">Calle</label>
+                <input type="text" class="form-control" id="productName" value="" name="productName">
+              </div>
+              <div class="col-md-4 mb-3">
+                <label for="productName">Numero</label>
+                <input type="text" class="form-control" id="productName" value="" name="productName">
+              </div>
+              <div class="col-md-6 mb-3">
+                <label for="productName">Esquina</label>
+                <input type="text" class="form-control" id="productName" value="" name="productName">
+              </div>
+            </div>
+            <hr>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <!-- Footer -->
@@ -43,7 +96,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
-  
+
 </body>
 
 </html>
