Eliminar compra (logrado)

--- a/cart.html
+++ b/cart.html
@@ -28,6 +28,7 @@
               <div class="col fw-bold">Costo</div>
               <div class="col fw-bold">Cantidad</div>
               <div class="col fw-bold">Subtotal</div>
+              <div class="col"></div>
             </div>
             <hr size="5" style="opacity:1;">
             <div class="row">
@@ -36,6 +37,7 @@
               <div class="col" id="unitCost"></div>
               <div class="col"><input type="number" id="cantidad" min="0" value="1"></input></div>
               <div class="col fw-bold" id="subTotal"></div>
+              <div class="col"></div>
             </div>
             <hr class="mt-2">
           </div>
